--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,14 @@
 *.dll
 *.so
 *.dylib
-cmd/twenty48/twenty48
+bin/
 
 # Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.txt
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
