Use shorter release name
After releasing the first version, I realized that project name was
redundant. It's alright to use `vx.x.x`. :)

Signed-off-by: Ali Yousuf <aly.yousuf7@gmail.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,4 +24,4 @@ archive:
 # Do not publish the release yet
 release:
   draft: true
-  name_template: "{{.ProjectName}}-v{{.Version}}"
+  name_template: "v{{.Version}}"
